# 7Zip.ShellExtension

./: 7Zip.ShellExtension.cpp  7Zip.ShellExtension.cpp.bak  7Zip.ShellExtension.cpp.old  7Zip.ShellExtension.def  7zip.msix  7zipdev.cer  7zipdev.pfx  CMakeLists.txt  README.md  sevenzip.cer  sevenzip.pfx  test.xml
7Zip.ShellExtensionHost/: 7Zip.ShellExtensionHost.cpp  7Zip.ShellExtensionHost.cpp.old  CMakeLists.txt
7Zip.ShellExtensionStub/: 7Zip.ShellExtensionStub.cpp  CMakeLists.txt
Release/: 7Zip.ShellExtension.exp  7zip.msix  AppxBlockMap.xml  AppxManifest.xml  sevenzip.pfx
